chore: Fix border margin layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,18 @@ CSS Reset
   padding: 0;
 }
 
+/*
+=============== 
+Layout
+===============
+*/
+.container {
+    width: 100%;
+    max-width: var(--max-width);
+    margin-inline: auto;         
+    padding-inline: 2rem;        
+}
+
 html {
   font-size: 100%;
 }
